--- a/.github/workflows/hellp.yaml
+++ b/.github/workflows/hellp.yaml
@@ -1,17 +1,17 @@
 name: Hello Workflow
+
 on:
   push:
     branches:
       - main
-    
+
 jobs:
-  hello-job:
-    
+  hellp-job:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "hello world"
+      - name: Print hello
         run: echo "hello world"
 
-      
-
+      - name: Use secret password (barwar_bany)
+        run: echo "The password is ${{ secrets.barwar2004 }}"
