Improve step name in Hello Workflow YAML to clarify output message

--- a/.github/workflows/hellp.yaml
+++ b/.github/workflows/hellp.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Print hello
+      - name: Print hello world
         run: echo "hello world"
 
       - name: Use secret password (barwar_bany)
