--- a/.github/workflows/hellp.yaml
+++ b/.github/workflows/hellp.yaml
@@ -17,7 +17,7 @@ jobs:
         run: echo "The password is ${{ secrets.BARWAR_BANY}}"
 
       - name: Use variable
-        run: echo "Variable says ${{ vars.BARWAR_BANY }}"
+        run: echo "Variable says: ${{ vars.BARWAR_BANY }}"
 
       - name: Use local env var
-        run: echo "Local var says $LOCAL_VAR"
+        run: echo "Local var says: $LOCAL_VAR"
