--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -15,8 +15,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.BARWAR }}
+          password: ${{ secrets.BARWAR_BANY}}
 
       - name: Build Docker image
         run: docker build -t barwarbakhtyar09/lol .
